kubernetes/ingresses/ingress-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  labels:
    name: test-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - host: api.test.voter-demo.com
    http:
      paths:
      - path: /.*
        backend:
          serviceName: election
          servicePort: 8080
