kubernetes/ingresses/ingress-uat.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uat-ingress
  labels:
    name: uat-ingress
  namespace: uat
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - host: api.uat.voter-demo.com
    http:
      paths:
      - path: /.*
        backend:
          serviceName: election
          servicePort: 8080
